--- a/views/loginPage.ejs
+++ b/views/loginPage.ejs
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Login</title>
+  <title>Login Page</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <script src="https://kit.fontawesome.com/f44f2f85dc.js" crossorigin="anonymous"></script>
@@ -58,7 +58,6 @@
                       <button class="btn btn-dark btn-lg btn-block" type="submit">Login</button>
                     </div>
 
-                    <!-- <a class="small text-muted" href="#!">Forgot password?</a> -->
                     <p class="mb-5 pb-lg-2" style="color: #393f81;">Don't have an account? <a href="/register"
                         style="color: #393f81;">Register here</a></p>
                   
@@ -87,7 +86,6 @@
         email: loginFormData.get('email'),
         password: loginFormData.get('password')
       }
-      // console.log(JSON.stringify(loginUserInfoObj))
    
   try {
     const response = await fetch('/login', {
@@ -108,11 +106,14 @@
       
         if(isAdmin.includes('admin'))
         {
-         return location.assign('/admin/dashboard');  // routing to the admin routes
+          // console.log(responseData);
+          window.location.assign('/admin/dashboard'); // routing to the admin routes
+         return ;
         }
+        
       clearErrorStates();
       
-      location.assign('/home'); //After all ok route to the home page
+       return  location.assign('/'); //After all ok, route to the home page for user
     } else if (response.status === 404) {
       // Email not registered
       clearErrorStates();
@@ -133,7 +134,6 @@
   }
 }
     
-
     function clearErrorStates() {
       loginEmail.classList.remove('is-invalid');
       loginPassword.classList.remove('is-invalid');
