clearing code done

--- a/views/loginPage.ejs
+++ b/views/loginPage.ejs
@@ -107,7 +107,7 @@
         if(isAdmin.includes('admin'))
         {
           // console.log(responseData);
-          window.location.assign('/admin/dashboard'); // routing to the admin routes
+          window.location.assign('/admin'); // routing to the admin routes
          return ;
         }
         
