--- a/views/homePage.ejs
+++ b/views/homePage.ejs
@@ -21,8 +21,8 @@
         <div class="row row-cols-1 row-cols-md-3 g-4">
 
           <% hotelsInfo.forEach((hotel, index) => { %>
-            <div class="col">
-                <div class="card">
+            <div  class="col mt-4">
+                <div style="box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;" class="card">
                     <a  style="text-decoration: none;" class="text-dark" href="/hotel-details/<%=hotel.HotelName %>" >
                           
                         <!-- Link to the booking page with hotel ID -->
