--- a/views/loginPage.ejs
+++ b/views/loginPage.ejs
@@ -10,58 +10,59 @@
   <script src="https://kit.fontawesome.com/f44f2f85dc.js" crossorigin="anonymous"></script>
 </head>
 
-<body>
-  <section class="" style="background-color: #9A616D;">
-    <div class="container py-5 h-100">
-      <div class="row d-flex justify-content-center align-items-center h-100">
-        <div class="col col-xl-10">
-          <div class="card" style="border-radius: 1rem;">
-            <div class="row g-0">
-              <div class="col-md-6 col-lg-5 d-none d-md-block">
-                <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-login-form/img1.webp"
-                  alt="login form" class="img-fluid" style="border-radius: 1rem 0 0 1rem;" />
-              </div>
-              <div class="col-md-6 col-lg-7 d-flex align-items-center">
-                <div class="card-body p-4 p-lg-5 text-black">
-                  <div class="container mt-5">
-                    <% if (error_msg && error_msg.length > 0) { %>
-                      <div class="alert alert-danger">
-                        <%= error_msg[0] %>
-                      </div>
+<body style="background-color: #9A616D; ">
+
+  <div class="container">
+    <div class="row d-flex justify-content-center align-items-center mt-4">
+      <div class="col col-xl-10">
+        <div class="card" style="border-radius: 1rem;">
+          <div class="row g-0">
+            <div class="col-md-6 col-lg-5 d-none d-md-block">
+              <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-login-form/img1.webp"
+                alt="login form" class="img-fluid" style="border-radius: 1rem 0 0 1rem;" />
+            </div>
+            <div class="col-md-6 col-lg-7 d-flex align-items-center">
+              <div class="card-body p-4 p-lg-5 text-black">
+                <div class="container mt-5">
+                  <% if (error_msg && error_msg.length> 0) { %>
+                    <div class="alert alert-danger">
+                      <%= error_msg[0] %>
+                    </div>
                     <% } %>
 
-                  <form id="loginForm">
-                    <h4 class="fw-bold mb-3 pb-3" style="letter-spacing: 1px;">Sign into your account</h4>
+                      <form id="loginForm">
+                        <h4 class="fw-bold mb-3 pb-3" style="letter-spacing: 1px;">Sign into your account</h4>
 
-                    <div class="form-outline mb-4">
-                      <input type="email" id="loginEmail" class="form-control form-control-lg" name="email" required />
-                      <label id="emailLabel" class="form-label" for="loginEmail">Email address <span
-                          style="display: none;" id="emailRegisterAlertSpan">is not register</span></label>
-                    </div>
+                        <div class="form-outline mb-4">
+                          <input type="email" id="loginEmail" class="form-control form-control-lg" name="email"
+                            required />
+                          <label id="emailLabel" class="form-label" for="loginEmail">Email address <span
+                              style="display: none;" id="emailRegisterAlertSpan">is not register</span></label>
+                        </div>
 
-                    <div class="form-outline mb-4">
+                        <div class="form-outline mb-4">
 
-                      <div class="input-group ">
-                        <input type="password" class="form-control form-control-lg" id="loginPassword" name="password"
-                          required>
-                        <button class="btn btn-outline-primary" type="button" id="togglePasswordBtn">
-                          <i class="fas fa-eye "></i>
-                        </button>
-                      </div>
+                          <div class="input-group ">
+                            <input type="password" class="form-control form-control-lg" id="loginPassword"
+                              name="password" required>
+                            <button class="btn btn-outline-primary" type="button" id="togglePasswordBtn">
+                              <i class="fas fa-eye "></i>
+                            </button>
+                          </div>
 
-                      <label id="passwordLabel" class="form-label" for="loginPassword">Password <span
-                          id="passwordAlertSpan" style="display: none;">is incorrect</span></label>
+                          <label id="passwordLabel" class="form-label" for="loginPassword">Password <span
+                              id="passwordAlertSpan" style="display: none;">is incorrect</span></label>
 
-                    </div>
+                        </div>
 
-                    <div class="pt-1 mb-4">
-                      <button class="btn btn-dark btn-lg btn-block" type="submit">Login</button>
-                    </div>
+                        <div class="pt-1 mb-4">
+                          <button class="btn btn-dark btn-lg btn-block" type="submit">Login</button>
+                        </div>
 
-                    <p class="mb-5 pb-lg-2" style="color: #393f81;">Don't have an account? <a href="/register"
-                        style="color: #393f81;">Register here</a></p>
-                  
-                  </form>
+                        <p class="mb-5 pb-lg-2" style="color: #393f81;">Don't have an account? <a href="/register"
+                            style="color: #393f81;">Register here</a></p>
+
+                      </form>
                 </div>
               </div>
             </div>
@@ -69,93 +70,92 @@
         </div>
       </div>
     </div>
-  </section>
-  <script>
-    const loginForm = document.getElementById('loginForm')
-    const emailRegisterAlertSpan = document.getElementById('emailRegisterAlertSpan')
-    const passwordAlertSpan = document.getElementById('passwordAlertSpan');
-    const passwordLabel = document.getElementById("passwordLabel")
-    const emailLabel = document.getElementById('emailLabel')
-    const loginEmail = document.getElementById('loginEmail');
-    const loginPassword = document.getElementById('loginPassword')
-    // Login form submit event istner
-    loginForm.onsubmit = async(event) => {
-      event.preventDefault()
-      const loginFormData = new FormData(loginForm)
-      const loginUserInfoObj = {
-        email: loginFormData.get('email'),
-        password: loginFormData.get('password')
-      }
-   
-  try {
-    const response = await fetch('/login', {
-      method: 'POST',
-      body: JSON.stringify(loginUserInfoObj),
-      headers: {
-        'Content-Type': 'application/json'
-      }
-    });
 
-    const responseData = await response.json();
-
-    //sucessfull login 
-    if (response.status === 200) {
-
-      //check user is admin or not
-       let isAdmin = String(responseData.message);
-      
-        if(isAdmin.includes('admin'))
-        {
-          // console.log(responseData);
-          window.location.assign('/admin'); // routing to the admin routes
-         return ;
+    <script>
+      const loginForm = document.getElementById('loginForm')
+      const emailRegisterAlertSpan = document.getElementById('emailRegisterAlertSpan')
+      const passwordAlertSpan = document.getElementById('passwordAlertSpan');
+      const passwordLabel = document.getElementById("passwordLabel")
+      const emailLabel = document.getElementById('emailLabel')
+      const loginEmail = document.getElementById('loginEmail');
+      const loginPassword = document.getElementById('loginPassword')
+      // Login form submit event istner
+      loginForm.onsubmit = async (event) => {
+        event.preventDefault()
+        const loginFormData = new FormData(loginForm)
+        const loginUserInfoObj = {
+          email: loginFormData.get('email'),
+          password: loginFormData.get('password')
         }
-        
-      clearErrorStates();
-      
-       return  location.assign('/'); //After all ok, route to the home page for user
-    } else if (response.status === 404) {
-      // Email not registered
-      clearErrorStates();
-      loginEmail.classList.add('is-invalid');
-      emailRegisterAlertSpan.style.display = "inline";
-      emailLabel.classList.add("text-danger");
-    } else if (response.status === 401) {
-      // Incorrect password
-      clearErrorStates();
-      loginPassword.classList.add('is-invalid');
-      passwordAlertSpan.style.display = "inline";
-      passwordLabel.classList.add("text-danger");
-    } else {
-      console.log('Error in login:', responseData);
-    }
-  } catch (error) {
-    console.log('Error in submitting the Form', error);
-  }
-}
-    
-    function clearErrorStates() {
-      loginEmail.classList.remove('is-invalid');
-      loginPassword.classList.remove('is-invalid');
-      emailRegisterAlertSpan.style.display = "none";
-      passwordAlertSpan.style.display = "none";
-      emailLabel.classList.remove("text-danger");
-      passwordLabel.classList.remove("text-danger");
-      loginPassword.value = ''; // Clear password field
-    }
 
-    const togglePasswordBtn = document.getElementById('togglePasswordBtn');
+        try {
+          const response = await fetch('/login', {
+            method: 'POST',
+            body: JSON.stringify(loginUserInfoObj),
+            headers: {
+              'Content-Type': 'application/json'
+            }
+          });
 
-    togglePasswordBtn.addEventListener('click', function () {
-      if (loginPassword.type === "password") {
-        loginPassword.type = "text";
-        togglePasswordBtn.innerHTML = '<i class="fas fa-eye-slash"></i>';
-      } else {
-        loginPassword.type = "password";
-        togglePasswordBtn.innerHTML = '<i class="fas fa-eye"></i>';
+          const responseData = await response.json();
+
+          //sucessfull login 
+          if (response.status === 200) {
+
+            //check user is admin or not
+            let isAdmin = String(responseData.message);
+
+            if (isAdmin.includes('admin')) {
+              // console.log(responseData);
+              window.location.assign('/admin'); // routing to the admin routes
+              return;
+            }
+
+            clearErrorStates();
+
+            return location.assign('/'); //After all ok, route to the home page for user
+          } else if (response.status === 404) {
+            // Email not registered
+            clearErrorStates();
+            loginEmail.classList.add('is-invalid');
+            emailRegisterAlertSpan.style.display = "inline";
+            emailLabel.classList.add("text-danger");
+          } else if (response.status === 401) {
+            // Incorrect password
+            clearErrorStates();
+            loginPassword.classList.add('is-invalid');
+            passwordAlertSpan.style.display = "inline";
+            passwordLabel.classList.add("text-danger");
+          } else {
+            console.log('Error in login:', responseData);
+          }
+        } catch (error) {
+          console.log('Error in submitting the Form', error);
+        }
       }
-    });
-  </script>
+
+      function clearErrorStates() {
+        loginEmail.classList.remove('is-invalid');
+        loginPassword.classList.remove('is-invalid');
+        emailRegisterAlertSpan.style.display = "none";
+        passwordAlertSpan.style.display = "none";
+        emailLabel.classList.remove("text-danger");
+        passwordLabel.classList.remove("text-danger");
+        loginPassword.value = ''; // Clear password field
+      }
+
+      const togglePasswordBtn = document.getElementById('togglePasswordBtn');
+
+      togglePasswordBtn.addEventListener('click', function () {
+        if (loginPassword.type === "password") {
+          loginPassword.type = "text";
+          togglePasswordBtn.innerHTML = '<i class="fas fa-eye-slash"></i>';
+        } else {
+          loginPassword.type = "password";
+          togglePasswordBtn.innerHTML = '<i class="fas fa-eye"></i>';
+        }
+      });
+    </script>
 </body>
 
 </html>
