--- a/views/hotelDetailsPage.ejs
+++ b/views/hotelDetailsPage.ejs
@@ -14,7 +14,10 @@
             height: 30rem;
             object-fit: cover;
         }
-        
+        .roomCardBoxDiv{
+            box-shadow: rgba(0, 0, 0, 0.20) 2.4px 6.4px 8.2px;
+            background-color: #f2eeee;
+        }
     </style>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
@@ -60,11 +63,11 @@
 </div>
    
   <!-- Hotel rooms -->
-    <h2>Rooms</h2>
+    <h2 class="mt-3">Rooms</h2>
     <div class="row">
         <% hotelDetails.Rooms.forEach(room => { %>
-            <div class="col-md-4 mb-4">
-                <div class="card">
+            <div  class="col-md-4 mb-4">
+                <div class="card roomCardBoxDiv">
                     <div class="card-body">
                         <h5 class="card-title"><%= room.Description %></h5>
                         <!-- <p class="card-text"><b>Type:</b> <%= room.Type %></p> -->
@@ -75,13 +78,11 @@
         <% }) %>
         
         <!-- Hotel address -->
-        <div class="address-container d-flex">
-            <p class="me-1"><b>Street: </b><%= hotelDetails.Address.StreetAddress %> </p>
-            <p class="me-1" ><b >City: </b><%= hotelDetails.Address.City %> </p>
-            <p class="me-1"><b >Country: </b><%= hotelDetails.Address.Country %> </p>
+        <div class="address-container">
+            <p class="me-1 fs-5"><b>Address: </b><%= hotelDetails.Address.StreetAddress, hotelDetails.Address.City, hotelDetails.Address.Country %></p>
           </div>
     </div>
-    <div><a type="button" href="/booking/<%=hotelDetails.HotelName%>" class="btn btn-primary btn-lg">Reserve Now</a></div>
+    <div><a type="button" href="/booking/<%=hotelDetails.HotelName%>" class="btn btn-primary btn-lg mb-4">Reserve Now</a></div>
 </div>
 
 <!-- Add Bootstrap JS and Popper.js scripts -->
