--- a/views/myBookingPage.ejs
+++ b/views/myBookingPage.ejs
@@ -7,11 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Bookings</title>
     <!-- Bootstrap CSS link -->
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+
     <!-- Custom CSS for styling -->
     <style>
       
-
         .booking-card {
             margin-bottom: 20px;
             border: 1px solid #ddd;
@@ -32,16 +32,16 @@
 
 <body>
     <%- include('partials/navbar') %>
-    <h1 class="mb-4">My Bookings</h1>
+    <h1 class="m-4">My Bookings</h1>
     <% if(myBookings.length == 0) {%>
         <div class="alert alert-primary" role="alert">
           No bookings yet.
           </div>
         <%}%>
-    <div class="row">
+    <div class="row mx-2">
         <% myBookings.forEach(booking => { %>
-            <div class="col-md-6">
-                <div class="card booking-card">
+            <div class="col-md-4">
+                <div class="card booking-card p-0">
                     <div class="card-body">
                         <h2><%= booking.hotelName %></h2>
                         <p><strong>Check-in Date:</strong> <span id="checkInDate_<%= booking._id %>"><%= booking.checkInDate %></span></p>
@@ -54,13 +54,9 @@
         <% }) %>
     </div>
     
-
-    
-
     <!-- Bootstrap JS scripts -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"     crossorigin="anonymous"></script>
+
 </body>
 
 </html>
