--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,14 +1,14 @@
 
-<nav class="navbar navbar-expand-lg bg-body-tertiary shadow mb-3">
+<nav style="box-shadow: 0px 10px 21px -6px rgba(0,0,0,0.83);" class="navbar navbar-expand-lg bg-light bg-gradient mb-3 sticky-top">
   <div class="container-fluid">
     <a class="navbar-brand" href="/home"><img style="height: 2rem;" src="/images/stayhubLogo.png" alt="Stayhub Logo"></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse flex-row-reverse" id="navbarNav">
-      <ul class="navbar-nav">
+      <ul class="navbar-nav ">
         <li class="nav-item mx-2">
-          <a class="nav-link" aria-current="page" href="/home">Home</a>
+          <a class="nav-link "  href="/home">Home</a>
         </li>
         <li class="nav-item mx-2">
           <a class="nav-link" href="/search-hotels">Find Hotel</a>
