--- a/views/adminPages/bookingManagementPage.ejs
+++ b/views/adminPages/bookingManagementPage.ejs
@@ -6,14 +6,12 @@
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <title>Booking Management</title>
 </head>
-<body>
+<body style="background-color: #dbdbdb;">
   <%- include('../partials/adminNavbar') %>
   <div class="container-fluid">
-      <!-- Add booking -->
-       <!-- Delete booking -->
      <!-- Show bookings List-->
      <h2 class="mt-5 text-center">Bookings List</h2>
-     <table class="table table-bordered">
+     <table class="table table-bordered table-hover bg-light bg-gradient shadow-lg rounded">
        <thead>
          <tr>
           <th style="width: 5%;">S. No</th>
