--- a/views/adminPages/hotelManagementPage.ejs
+++ b/views/adminPages/hotelManagementPage.ejs
@@ -17,7 +17,7 @@
 
     <!-- Hotels Section -->
      <div class="container">
-       <table class="  mt-3 table table-bordered table-hover  ">
+       <table class="  mt-3 table table-bordered table-hover bg-light bg-gradient shadow-lg rounded">
          <caption style="caption-side: top;" > <h2 class="text-center">Hotels List</h2> </caption>
       <thead  >
         <tr>
@@ -41,10 +41,10 @@
       </tbody>
     </table>
 </div>
-<hr class="my-3">
+<hr class="my-5">
 <!-- Add new hotel form -->
-<h2 class="text-center text-secondary mt-4">Add New Hotel</h2>
-<form id="addHotelForm" class="mx-3 mb-5 p-2">
+<h2 class="text-center mt-5">Add New Hotel</h2>
+<form id="addHotelForm" class="mx-3 mb-5 p-2 bg-light bg-gradient shadow-lg rounded ">
     <!-- Basic Info -->
     <div class="BasicInfoContainer form-row">
       <div class="form-group col-lg">
@@ -66,7 +66,7 @@
     </div>
   
     <!-- Address Details -->
-    <h4>Address:</h4>
+    <h5>Address:</h5>
     <div class="addressContainer form-row">
       <div class="form-group col-lg">
         <label for="StreetAddress">Street Address</label>
@@ -83,7 +83,7 @@
     </div>
   
     <!-- Room Details -->
-    <h4>Rooms:</h4>
+    <h5>Rooms:</h5>
     <div id="roomsContainer">
       <div class="form-row room">
         <div class="form-group col-lg-4">
