--- a/views/BookingPage.ejs
+++ b/views/BookingPage.ejs
@@ -4,18 +4,19 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+
   <title>Hotel Booking Page</title>
-  <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" />
+
 </head>
 
 <body>
   <%- include('partials/navbar') %>
-  <div class="container">
+  <div class="container-fluid  px-5">
     <h1 class="mt-3">Hotel Booking</h1>
 
     <!-- Booking Form -->
-    <form id="bookingForm" class="mt-4" method="post" enctype="application/x-www-form-urlencoded"
+    <form id="bookingForm" class="mt-4 shadow-lg rounded bg-light p-4 " method="post" enctype="application/x-www-form-urlencoded"
       action="/booking">
       <!-- Hotel Information -->
       <div class="card mt-3">
