--- a/views/adminPages/adminDashboardPage.ejs
+++ b/views/adminPages/adminDashboardPage.ejs
@@ -8,12 +8,22 @@
   <title>Admin Dashboard</title>
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 </head>
-<body>
+<style>
+  .shadow-css{
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+    cursor: pointer;
+  }
+  .card:hover {
+  transform: scale(1.08);
+  box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
+  }
+</style>
+<body style="background-color: #dbdbdb;">
   <%- include('../partials/adminNavbar') %>
-  <div class="container mt-5">
+  <div  class="container mt-5">
     <div class="row">
       <div class="col-md-4">
-        <div class="card text-white bg-primary mb-3">
+        <div class="card  text-white bg-primary mb-3 shadow-css">
           <div class="card-header">Users</div>
           <div class="card-body">
             <h5 class="card-title"><%= userCount %> Users</h5>
@@ -22,7 +32,7 @@
         </div>
       </div>
       <div class="col-md-4">
-        <div class="card text-white bg-success mb-3">
+        <div class="card text-white bg-success mb-3 shadow-css">
           <div class="card-header">Hotels</div>
           <div class="card-body">
             <h5 class="card-title"><%= hotelCount %> Hotels</h5>
@@ -31,7 +41,7 @@
         </div>
       </div>
       <div class="col-md-4">
-        <div class="card text-white bg-danger mb-3">
+        <div class="card text-white bg-danger mb-3 shadow-css">
           <div class="card-header">Bookings</div>
           <div class="card-body">
             <h5 class="card-title"><%= bookingCount %> Bookings</h5>
