--- a/views/homePage.ejs
+++ b/views/homePage.ejs
@@ -38,7 +38,7 @@
                                 <div class="carousel-item active">
                                     <img src="<%= hotel.imagesUrl.image1 %>" class="  fix-sized" alt="...">
                                 </div>
-                                <!-- <div class="carousel-item ">
+                                <div class="carousel-item ">
                                     <img src="<%= hotel.imagesUrl.image2 %>" class="  fix-sized"alt="...">
                                 </div>
                                 <div class="carousel-item ">
@@ -49,7 +49,7 @@
                               </div>
                               <div class="carousel-item ">
                                 <img src="<%= hotel.imagesUrl.image5 %>" class="  fix-sized" alt="...">
-                            </div> -->
+                            </div>
                             </div>
                             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators<%= index %>" data-bs-slide="prev">
                                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
