--- a/views/profilePage.ejs
+++ b/views/profilePage.ejs
@@ -10,7 +10,7 @@
 
   <%- include('partials/navbar') %>
 
-  <div class="container mt-5">
+  <div class="container mt-5 shadow-lg rounded bg-light p-5">
     <div class="card">
       <div class="card-body">
         <h5 class="card-title">Profile Information</h5>
