--- a/views/searchHotelsPage.ejs
+++ b/views/searchHotelsPage.ejs
@@ -4,28 +4,28 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Search Hotels</title>
-  <!-- Add Bootstrap CSS -->
-  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+
 </head>
 <body>
   <%- include('partials/navbar')%>
   <div class="container mt-5">
     <h1>Search Hotels</h1>
-    <form id="searchForm">
+    <form id="searchForm " class="shadow-lg rounded bg-light p-5">
       <div class="form-group">
         <label for="location">Location:</label>
         <select class="form-control" id="location" name="location">
           <option value="">Select location</option>
         </select>
       </div>
-      <div class="form-group">
+      <div class="form-group mt-3">
         <label for="hotel">Hotel:</label>
         <select class="form-control" id="hotel" name="hotel">
           <option value="">Select hotel</option>
         </select>
       </div>
 
-      <button type="submit" class="btn btn-primary">Search</button>
+      <button type="submit" class="btn btn-primary my-2">Search</button>
     </form>
 
     <div id="results" class="mt-5">
