--- a/views/adminPages/hotelManagementPage.ejs
+++ b/views/adminPages/hotelManagementPage.ejs
@@ -10,7 +10,7 @@
  
     <title>Hotel Management</title>
 </head>
-<body>
+<body style="background-color: #dbdbdb;">
   
  <%-  include('../partials/adminNavbar') %>
  <div class="container-fluid">
